# hpack-headers

./: .gitignore  CMakeLists.txt  README.md  config.hpp.in
debian/: changelog  control  copyright  libhpack-headers.install  rules
include/: msgpack_traits.hpp
include/hpack-headers/: header.hpp  header_definitions.hpp  mpl.hpp  msgpack_traits.hpp
src/: header.cpp
tests/: CMakeLists.txt
tests/unit/: header.cpp  header_table.cpp  header_table.cpp.autosave
